Fix z-indexes in core
The toolbar only needs to be z-index 1, not 100. The global overlay
needs to be above this and so is set to 2.

Bug: 73650

--- a/src/ui/styles/ve.ui.Overlay.css
+++ b/src/ui/styles/ve.ui.Overlay.css
@@ -18,3 +18,8 @@
 .ve-ui-overlay > * {
 	z-index: 1;
 }
+
+.ve-ui-overlay-global {
+	/* Toolbar is z-index 1 */
+	z-index: 2;
+}
